Fixed Upload Image layout problem

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -21,58 +21,50 @@
 
 .proflile-img {
     position: relative;
-    /* align-items: center; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
   }
   
   .proflile-img img {
     width: 100%;
     object-fit: cover;
     opacity: 1;
+    display: flex;
     display: block;
-    transition: 1s ease;
     backface-visibility: hidden;
+    border: 1px solid white;
+    transition: 1s ease;
   }
+label[for=upload]{
+  display:inline-block;
+  visibility: hidden;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color:white;
+  font-weight:bold;
+  background-color: #04AA6D;
+  padding:1vw;
+  text-align: center;
+  font-size: 1.3vw;
+  border: none;
+  border-radius:3px;
+  cursor:pointer;
   
-  .middle {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 75%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
 }
-  
-  .proflile-img:hover img {
-    opacity: 0.3;
+.proflile-img:hover label[for=upload]
+{
+  visibility: visible;
+}
+.proflile-img:hover  img
+{
+  opacity: 0.3;
     border: 1px solid black;
-  }
-  
-  .proflile-img:hover .middle {
-    opacity: 1;
-   
-  }
-
-.custom-file-input {
-    color: transparent;
-  }
-  .custom-file-input::-webkit-file-upload-button {
-    visibility: hidden;
-  }
-  .custom-file-input::before {
-    content: 'Upload Image';
-    color: white;
-    display: inline-block;   
-    background-color: #04AA6D;
-    border-radius: 3px;
-    padding: 15px 20px;
-    outline: none;
-    white-space: nowrap;
-    cursor: pointer;
-    font-weight: 700;
-    font-size: 10pt;
-  }
+}
+label[for=upload] input{ display:none }
 
   .name-and-tagline
   {
